--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                             <p>Cart</p>
                         </button>
                         <button class="btn2">Find a property</button>
-                    </div>      
+                    </div>  
+                </div>
+                <div class="nav__menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1)" class="menu" id="menu"><path d="M4 6h16v2H4zm4 5h12v2H8zm5 5h7v2h-7z"></path></svg>
                 </div>
             </div>
     </nav>
