--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Realco</title>
 </head>
 <body>
+    <div id="navbar">
+        <p>Get your dream house in a week.</p>
+        <img src="./img/pre-nav.svg" alt="logo">
+    </div>
     <nav>
         <div class="container">
             <div class="nav__wrapper">
